--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [{ name = "Carlo Bertini [WaYdotNET]", email = "waydotnet@gmail.com" }
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "black>=25.1.0",
     "pyyaml>=6.0.2",
     "ruff>=0.9.9",
     "typer>=0.15.2",
