--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ target-version = "py312"
 exclude = [
     ".venv",
     "__pycache__",
+    "tests/**",
 ]
 ignore = [
     "B018", # Found useless expression. Either assign it to a variable or remove it.
@@ -61,6 +62,7 @@ select = [
     "Q", # flake8-quotes
     "W", # pycodestyle
 ]
+
 [tool.ruff.lint.isort]
 required-imports = ["from __future__ import annotations"]
 
