--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dev = [
     "ruff>=0.9.9",
     "pytest>=8.3.5",
     "types-pyyaml>=6.0.12.20241230",
+    "pytest-cov>=6.0.0",
 ]
 
 [project.scripts]
