--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,25 @@
 [project]
 name = "zen-generator"
-version = "0.1.1"
+version = "0.1.2"
 description = "A bidirectional Python code generator that converts between AsyncAPI 3.0 specifications and Python code (pure Python or FastAPI implementations)."
 authors = [{ name = "Carlo Bertini [WaYdotNET]", email = "waydotnet@gmail.com" }]
 readme = "README.md"
+license = { text = "MIT" }
 requires-python = ">=3.10"
-
+keywords = ["asyncapi", "code generator", "python", "fastapi"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Operating System :: OS Independent",
+    "Environment :: Web Environment",
+    "Programming Language :: Python",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
 dependencies = [
     "black>=25.1.0",
     "pyyaml>=6.0.2",
@@ -13,6 +27,13 @@ dependencies = [
     "typer>=0.15.2",
     "yamllint>=1.35.1",
 ]
+
+[project.urls]
+"Home Page" = "https://pypi.org/project/zen-generator/"
+Documentation = "https://github.com/WaYdotNET/zen-generator/blob/main/README.md"
+GitHub = "https://github.com/WaYdotNET/zen-generator"
+Changelog = "https://github.com/WaYdotNET/zen-generator/blob/main/CHANGELOG.md"
+"Bug Reports" = "https://github.com/WaYdotNET/zen-generator/discussions"
 
 [dependency-groups]
 dev = [
